Add [NUM][TYPE] issue title format and pending-promotion workflow
Issue Title Format:
- All issues now use [NUM][TYPE] format: issue number first, then type
- Examples: [42][BUG], [43][FEATURE], [44][REVIEW], [45][SECURITY], [46][CI]
- No redundant info in titles (phase labels are in labels, not titles)
- Bug/Feature triage workflows auto-normalize titles with issue numbers

Pending-Promotion Workflow:
- Thread managers add `pending-promotion` label when phase is complete
- Themis watches for this label and evaluates the manager's report
- Critical rule: report MUST be written BEFORE adding the label
- Documented label meanings: pending-promotion, phase:dev/test/review

New Files:
- .github/ISSUE_TEMPLATE/bug_report.yml - Bug report template
- .github/ISSUE_TEMPLATE/feature_request.yml - Feature request template
- .github/ISSUE_TEMPLATE/config.yml - Template configuration

Updated Workflows:
- ghe-bug-triage.yml: Auto-normalizes title to [NUM][BUG] format
- ghe-feature-triage.yml: Auto-normalizes title to [NUM][FEATURE] format
- ghe-pr-review.yml: Creates issues with [NUM][REVIEW] format
- ghe-security-alert.yml: Creates issues with [NUM][SECURITY] format
- ghe-ci-failure.yml: Creates issues with [NUM][CI] format

--- a/.github/workflows/ghe-ci-failure.yml
+++ b/.github/workflows/ghe-ci-failure.yml
@@ -82,10 +82,13 @@ jobs:
                  - Count of consecutive failures
                - If this is 3+ consecutive failures: Add urgent label
             4. If $HAS_EXISTING is false:
-               - Create issue with title: [CI #RUN_ID] $WORKFLOW_NAME failed on $HEAD_BRANCH ($HEAD_SHA_SHORT)
-               - The title MUST include the run ID and be meaningful enough to understand what failed
+               - Create issue with title: [CI] $WORKFLOW_NAME failed on $HEAD_BRANCH
                - Labels: phase:review, ci-failure, source:ci
-               - Body: Branch, commit SHA, failed jobs, error summary, run link
+               - Body: Branch, commit SHA, failed jobs, error summary, run link, run ID: $RUN_ID
+               - IMPORTANT: After creating the issue, update its title to include the issue number:
+                 - Get the created issue number from the output
+                 - Update title to: [ISSUE_NUM][CI] $WORKFLOW_NAME failed on $HEAD_BRANCH
+                 - Example: [42][CI] Tests failed on feature/auth
 
             Use Argos Panoptes avatar: https://robohash.org/argos-panoptes.png?size=77x77&set=set3
             Sign comments as "Argos Panoptes (The All-Seeing)" - you are the 24/7 monitoring system.
