--- a/.github/workflows/ghe-bug-triage.yml
+++ b/.github/workflows/ghe-bug-triage.yml
@@ -32,6 +32,30 @@ jobs:
         with:
           fetch-depth: 1
 
+      - name: Normalize issue title with [NUM][BUG] format
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          ISSUE_NUMBER: ${{ github.event.issue.number }}
+        run: |
+          # Get current title
+          current_title=$(gh issue view "$ISSUE_NUMBER" --json title --jq '.title')
+
+          # Check if title already has [NUM][BUG] format
+          if [[ "$current_title" =~ ^\[[0-9]+\]\[BUG\] ]]; then
+            echo "Title already normalized: $current_title"
+            exit 0
+          fi
+
+          # Remove existing [BUG] prefix if present (from template)
+          clean_title=$(echo "$current_title" | sed 's/^\[BUG\] *//')
+
+          # Create normalized title: [NUM][BUG] description
+          new_title="[${ISSUE_NUMBER}][BUG] ${clean_title}"
+
+          # Update the issue title
+          gh issue edit "$ISSUE_NUMBER" --title "$new_title"
+          echo "Title normalized to: $new_title"
+
       - name: Check if already processed
         id: check-status
         env:
