--- a/.github/workflows/ghe-feature-triage.yml
+++ b/.github/workflows/ghe-feature-triage.yml
@@ -33,6 +33,30 @@ jobs:
         with:
           fetch-depth: 1
 
+      - name: Normalize issue title with [NUM][FEATURE] format
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          ISSUE_NUMBER: ${{ github.event.issue.number }}
+        run: |
+          # Get current title
+          current_title=$(gh issue view "$ISSUE_NUMBER" --json title --jq '.title')
+
+          # Check if title already has [NUM][FEATURE] format
+          if [[ "$current_title" =~ ^\[[0-9]+\]\[FEATURE\] ]]; then
+            echo "Title already normalized: $current_title"
+            exit 0
+          fi
+
+          # Remove existing [FEATURE] prefix if present (from template)
+          clean_title=$(echo "$current_title" | sed 's/^\[FEATURE\] *//')
+
+          # Create normalized title: [NUM][FEATURE] description
+          new_title="[${ISSUE_NUMBER}][FEATURE] ${clean_title}"
+
+          # Update the issue title
+          gh issue edit "$ISSUE_NUMBER" --title "$new_title"
+          echo "Title normalized to: $new_title"
+
       - name: Check if already processed
         id: check-status
         env:
