Deep plugin audit: fix versions, avatars, and paths
Version alignment (all files now 0.4.6-alpha):
- README.md badge: 0.2.6-alpha -> 0.4.6-alpha
- plugins/ghe/README.md badge: 0.4.4 -> 0.4.6-alpha
- plugin.json version field aligned

Avatar reference fixes:
- argos-panoptes.png -> argos.png (all files)
- Fixed Hermes/Cerberus avatar swap in issue-comment-format.md
- Replaced robohash.org placeholders with real avatar URLs in workflows
- Converted all .md files from absolute GitHub URLs to relative paths

Structural cleanup:
- Moved GHE-REVIEWS from root to plugins/ghe/
- Consolidated 3 identical hook backups to 1 (hooks-pre-merge-backup.json)
- Removed old zip (contents verified, no unique files)

auto_approve.sh rewrite:
- Changed from whitelist to target-based approach
- Check WHERE commands write, not WHAT commands are
- Allow: project folder, /tmp/, ~/.claude/
- Block: writes outside allowed dirs
- Protect system drives, allow external drives

--- a/.github/workflows/ghe-ci-failure.yml
+++ b/.github/workflows/ghe-ci-failure.yml
@@ -90,7 +90,7 @@ jobs:
                  - Update title to: [ISSUE_NUM][CI] $WORKFLOW_NAME failed on $HEAD_BRANCH
                  - Example: [42][CI] Tests failed on feature/auth
 
-            Use Argos Panoptes avatar: https://robohash.org/argos-panoptes.png?size=77x77&set=set3
+            Use Argos Panoptes avatar: https://raw.githubusercontent.com/Emasoft/ghe-marketplace/main/plugins/ghe/assets/avatars/argos.png
             Sign comments as "Argos Panoptes (The All-Seeing)" - you are the 24/7 monitoring system.
             You are documenting this CI failure for Chronos (the CI/CD agent) to investigate when the maintainer is online.
             Don't attempt to fix - just document for review.
