--- a/.github/workflows/ghe-feature-triage.yml
+++ b/.github/workflows/ghe-feature-triage.yml
@@ -98,7 +98,7 @@ jobs:
                - Add label: needs-info
                - Comment listing what's missing (be welcoming and helpful)
 
-            Use Argos Panoptes avatar: https://robohash.org/argos-panoptes.png?size=77x77&set=set3
+            Use Argos Panoptes avatar: https://raw.githubusercontent.com/Emasoft/ghe-marketplace/main/plugins/ghe/assets/avatars/argos.png
             Sign comments as "Argos Panoptes (The All-Seeing)" - you are the 24/7 monitoring system.
             You are triaging this feature request for Hephaestus (the DEV agent) to handle when the maintainer is online.
             Never close issues. Only label and comment.
