--- a/plugins/ghe/.gitignore
+++ b/plugins/ghe/.gitignore
@@ -22,3 +22,10 @@ logs/
 
 # Local settings (user-specific, not plugin-specific)
 *.local.md
+__pycache__/
+
+# Data folders - created in user's project by /ghe:setup, not in plugin
+# These may appear during testing but should NOT be committed with plugin
+GHE_REPORTS/
+GHE-REVIEWS/
+REQUIREMENTS/
