Add marketplace-level scripts, avatars, and validation improvements
New files:
- scripts/release.py: Marketplace release automation with independent versioning
- scripts/generate_toc.py: Universal markdown TOC generator
- assets/avatars/: 12 agent avatar images (Ares, Argos, Artemis, Athena,
  Cerberus, Chronos, Claude, Hephaestus, Hera, Hermes, Mnemosyne, Themis)
- validation_scripts/validate_plugin.py: New plugin validator
- plugins/marketplace-utils/.gitignore: Ignore local settings

Updated:
- validation_scripts/plugin-validator.py: Major rewrite with enhanced validation
- validation_scripts/validate-agent.sh: Improved agent validation
- validation_scripts/validate-settings.sh: Enhanced settings checks
- validation_scripts/validate-skill.py: Better skill validation
- .gitignore: Add patterns for local files and caches

Removed:
- .claude/last_active_issue.json: No longer needed (repo stored in ghe.local.md)

--- a/.gitignore
+++ b/.gitignore
@@ -45,7 +45,14 @@ build/
 
 # GHE plugin settings (user-local, per-project)
 .claude/*.local.md
+CLAUDE.md
 
 # Backup folder
 backup/
 .claude/ghe_pending_transcriptions.json
+
+docs_dev/
+scripts_dev/
+examples_dev/
+samples_dev/
+logs/
